Adds node script to put nav link into index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <title>Style Wiz</title>
 
@@ -14,8 +11,9 @@
     <h2>Components</h2>
     <ul>
       <li><a href="/heading">Heading</a></li>
-    </ul>
+      <li class="linkTemplate" style="display:none;"><a href=""></a></li>
+  </ul>
   </div>
 
-</body>
-</html>
+
+</body></html>
