--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <meta charset="UTF-8">
     <title>Style Wiz</title>
 
-    <link rel="stylesheet" href="common/normalize.css">
-    <link rel="stylesheet" href="common/main.css">
+    <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/main.css">
 </head>
 <body>
-  
+
   <div>
     <h2>Components</h2>
     <ul>
